
noinst_LIBRARIES = libmath.a

libmath_a_SOURCES = \
	Frustum.cpp \
	Matrix.cpp \
	Quaternion.cpp \
	Vector2.cpp \
	Vector3.cpp \
	Vector4.cpp \
	Constants.h \
	Frustum.h \
	Matrix.h \
	Matrix.inl \
	Quaternion.h \
	Vector2.h \
	Vector3.h \
	Vector4.h

libmath_a_LIBADD = @LIBOBJS@

AM_CXXFLAGS = -fno-default-inline

EXTRA_DIST = \
	_MathLib.vcproj

MAINTAINERCLEANFILES = \
	Makefile.in

