
noinst_LIBRARIES = libnmc.a

libnmc_a_SOURCES = \
		NmcAttribute.cpp \
		NmcCache.cpp \
		NmcContext.cpp \
		NmcController.cpp \
		NmcCoreParsers.cpp \
		NmcGeometry.cpp \
		NmcMesh.cpp \
		Nmc.h \
		NmcCache.h \
		NmcContext.h \
		NmcCoreParsers.h \
		NmcListParser.h \
		NmcMesh.h
libnmc_a_LIBADD = @LIBOBJS@

AM_CXXFLAGS = -fno-default-inline

EXTRA_DIST = \
		_NmcLib.vcproj

MAINTAINERCLEANFILES = \
	Makefile.in

