
noinst_LIBRARIES = libnwn.a

libnwn_a_SOURCES = \
	NwnBifFile.cpp \
	NwnDefines.cpp \
	NwnKeyFile.cpp \
	NwnLoader.cpp \
	NwnModuleFile.cpp \
	NwnStdLoader.cpp \
	NwnArray.h \
	NwnBifFile.h \
	NwnDefines.h \
	NwnDoubleLinkList.h \
	NwnKeyFile.h \
	NwnLoader.h \
	NwnMemoryFile.h \
	NwnModuleFile.h \
	NwnStdLoader.h \
	NwnStreamStack.h \
	NwnDialogTlkFile.cpp \
	NwnMdlDecomp.cpp \
	NwnMdlGeometry.cpp \
	NwnMdlNodes.cpp \
	NwnMdlR2A.cpp \
	NwnMdlSerialize.cpp \
	NwnDialogTlkFile.h \
	NwnHierarchy.h \
	NwnMdlGeometry.h \
	NwnMdlNodes.h \
	NwnModel.h \
	NwnSoundSet.h \
	NwnStreams.h \
	NwnTexturePlt.h

libnwn_a_LIBADD = @LIBOBJS@

AM_CXXFLAGS = -fno-default-inline

EXTRA_DIST = \
	_NwnLib.vcproj

MAINTAINERCLEANFILES = \
	Makefile.in

